# kimai-tauri

./: .prettierrc.yml  LICENSE.md  README.md  package-lock.json  package.json  svelte.config.js  vite.config.js
.github/workflows/: pr.yml  release.yml
src/: app.css
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  login.rs  main.rs  settings.rs
src/lib/: types.ts
src/lib/apiFetchers/: activities.ts  customers.ts  projects.ts  timesheets.ts  users.ts
src/lib/components/: Error.svelte  Input.svelte  LoadingIcon.svelte  Logout.svelte  PendingRequest.svelte  RecentTimers.svelte  Timer.svelte  TimerForm.svelte  UserInfo.svelte
src/lib/stores/: apiKey.ts  customers.ts  error.ts  timesheet.ts  user.ts
src/routes/: +layout.svelte  +page.svelte
src/routes/login/: +page.svelte
