[package]
name = "kimai-tauri"
version = "0.5.1"
description = "A Tauri App"
authors = ["Tuomas Rinne"]
license = "MIT"
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
codegen-units = 1
lto = true
strip = true

[build-dependencies]
tauri-build = { version = "1.2", features = [] }

[dependencies]
serde_json = { default-features = false, version = "1.0" }
serde = { version = "1.0", default-features = false }
tauri = { version = "1.2", features = ["base64", "compression", "notification-all", "shell-open", "system-tray", "updater", "wry"], default-features = false }
keyring = "2.0.0"
toml = "0.7.3"
directories = "5.0.0"

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = ["custom-protocol"]
# this feature is used used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = ["tauri/custom-protocol"]
